[src/view/Home] Add upload button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,8 @@
     "rename-prompt": "Enter new name:",
     "download": "Download",
     "download-all": "Download all",
-    "records": "Files"
+    "records": "Files",
+    "upload": "Upload"
   },
   "about": {
     "title": "About",
