--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -8,7 +8,8 @@
     "rename-prompt": "Entrez le nouveau nom :",
     "download": "Télécharger",
     "download-all": "Tout télécharger",
-    "records": "Fichiers"
+    "records": "Fichiers",
+    "upload": "Envoyer"
   },
   "about": {
     "github": "GitHub",
