--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Numworks connector",
+    "title": "Upsilon File Exchanger for NumWorks",
     "connect": "Connect",
     "disconnect": "Disconnect",
     "delete": "Delete",
@@ -13,7 +13,7 @@
   },
   "about": {
     "title": "About",
-    "description": "The Numworks connector is a web application that allows you to manage your Numworks from your browser.",
+    "description": "Upsilon File Exchanger for NumWorks is a web application that allows you to manage your Numworks from your browser.",
     "github": "GitHub"
   },
   "error": {
