[src/view/Home] Add storage usage

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,9 @@
     "download": "Download",
     "download-all": "Download all",
     "records": "Files",
-    "upload": "Upload"
+    "upload": "Upload",
+    "size": "Size",
+    "bytes": "bytes"
   },
   "about": {
     "title": "About",
